# chunked-gpt

./: .gitignore  config.yaml  download_data.sh  pyproject.toml  train.py
configs/: base.yaml
