[project]
name = "chunked-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "jsonargparse[signatures]>=4.34.0",
    "jupyterlab>=4.3.0",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "rich>=13.9.4",
    "ruff>=0.7.3",
    "torch>=2.5.1",
    "wandb>=0.18.6",
    "x-transformers>=1.42.9",
]
